tests/negative/gold/constructor_receiver_test.gold
tests/negative/constructor_receiver_test.toit:17:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  A.member
   ^
tests/negative/constructor_receiver_test.toit:18:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  B.member
   ^
tests/negative/constructor_receiver_test.toit:20:8: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  pre.A.member
       ^
tests/negative/constructor_receiver_test.toit:21:8: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  pre.B.member
       ^
tests/negative/constructor_receiver_test.toit:29:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
